--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -21,9 +21,10 @@
             android:layout_height="wrap_content"
             android:text="@string/greetings"
             android:textColor="@android:color/black"
-            android:textSize="40sp"
+            android:textSize="30sp"
+            android:gravity="center"
             android:textStyle="italic"
-            app:layout_constraintBottom_toTopOf="@+id/buttonEasyLevel"
+            app:layout_constraintBottom_toTopOf="@id/guideline2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -38,7 +39,7 @@
             android:padding="10dp"
             android:text="@string/easy"
             android:textColor="@android:color/white"
-            android:textSize="24sp"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/guideline2"
@@ -54,7 +55,7 @@
             android:padding="10dp"
             android:text="@string/middle"
             android:textColor="@android:color/white"
-            android:textSize="24sp"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/buttonEasyLevel" />
@@ -69,7 +70,7 @@
             android:padding="10dp"
             android:text="@string/hard"
             android:textColor="@android:color/white"
-            android:textSize="24sp"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/buttonMiddleLevel" />
@@ -101,7 +102,7 @@
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:contentDescription="@string/button"
-            app:layout_constraintBottom_toTopOf="@id/buttonEasyLevel"
+            app:layout_constraintBottom_toTopOf="@id/guideline2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewGreetings"
