--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -16,6 +16,12 @@
         <action
             android:id="@+id/action_titleFragment_to_recordsFragment"
             app:destination="@id/recordsFragment" />
+        <action
+            android:id="@+id/action_titleFragment_to_aboutGameFragment"
+            app:destination="@id/aboutGameFragment" />
+        <action
+            android:id="@+id/action_titleFragment_to_settingsFragment"
+            app:destination="@id/settingsFragment" />
     </fragment>
 
     <fragment
@@ -40,4 +46,14 @@
         android:id="@+id/recordsFragment"
         android:name="com.example.brainer.dialog.RecordsFragment"
         android:label="RecordsFragment" />
+    <fragment
+        android:id="@+id/aboutGameFragment"
+        android:name="com.example.brainer.about.AboutGameFragment"
+        android:label="fragment_about_game"
+        tools:layout="@layout/fragment_about_game" />
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.example.brainer.settings.SettingsFragment"
+        android:label="fragment_settings"
+        tools:layout="@layout/fragment_settings" />
 </navigation>
